Bug 145651 - FILESAVE OOXML write error if using default colour for chart legend background from sidebar
Summary: FILESAVE OOXML write error if using default colour for chart legend backgroun...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
5.2.7.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords:
Depends on:
Blocks: OOXML-Chart Chart-Sidebar Save
  Show dependency treegraph
 
Reported: 2021-11-13 02:03 UTC by stragu
Modified: 2023-07-05 07:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
error message (10.89 KB, image/png)
2021-11-13 02:05 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2021-11-13 02:03:41 UTC
Description:
If using the default colour for the legend area colour fill in a chart, saving as ODF works but saving as OOXML triggers a "Write Error" and doesn't let the user save.

Steps to Reproduce:
1. Create a new document with one LibreOffice component that supports chart editing (Impress, Writer, Calc). For these steps, us Impress.
2. Insert a chart (Insert > Chart), or create one that includes a colour key / lengend
3. In chart editing mode, select the legend, use the "sidebar > Area > Fill" and change from "none" to "color". Notice how the default blue that is used does not correspond to the colour in the colour picker right underneath.
4. Save as > OOXML format (in this example, PPTX)

Actual Results:
LibreOffice is unable to save, this error pops up:

Error saving the document xxxxx:
Write Error.
The file could not be written.

Expected Results:
- The colour in the colour picker corresponds to the default LibreOffice blue;
- The chart can be saved in OOXML formats.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Note that:
- Saving as ODF works without problem.
- Changing the legend background colour with "context menu > format legend > Area > Color", leaving the default and pressing "OK" does not reproduce the bug when saving to OOXML, so seems specific to the sidebar.
- Changing the colour to something other than the default will not reproduce the bug either.
- Reproduced with DOCX, PPTX and XLSX

Reproduced in:

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: c7500945fc5d5bd2130a2d38be0bd4b15445cd90
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: c7500945fc5d5bd2130a2d38be0bd4b15445cd90
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 67f2a99229101757af4f40118f4d3c83ba38648b
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-AU (en_AU); UI: en-US
Calc: threaded

Version: 7.2.2.2 / LibreOffice Community
Build ID: 02b2acce88a210515b4a5bb2e46cbfb63fe97d56
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.2.1.2 (x64) / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: default; VCL: win
Locale: en-AU (en_AU); UI: en-US
Calc: threaded

Version: 7.1.7.2 / LibreOffice Community
Build ID: c6a4e3954236145e2acb0b65f68614365aeee33f
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.0.6.2
Build ID: 00(Build:2)
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Ubuntu package version: 1:7.0.6-0ubuntu0.18.04.1_lo1
Calc: threaded
Comment 1 stragu 2021-11-13 02:05:10 UTC
Created attachment 176224 [details]
error message

Screenshot of error message.
Comment 2 Aron Budea 2021-11-16 01:23:38 UTC
Confirmed using LO Version: 7.3.0.0.alpha1+ (e6968f0485cfb2f6c941d11c438386e14a47095d), 5.2 / Ubuntu.
Comment 3 Commit Notification 2023-06-20 11:10:31 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6b3e29536ca770d7c2c42429390785c326d223ae

tdf#145651 Chart OOXML export: fix write error in exportSolidFill

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-06-20 12:49:52 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/bb1e68c72e2c95855bde54cd9eb592d0bd3dc4c6

tdf#145651 Chart OOXML export: fix write error in exportSolidFill

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-06-20 12:55:58 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/e980ee9d4a77937a42766edf61b2989d11aac149

tdf#145651 Chart OOXML export: fix write error in exportSolidFill

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2023-07-05 07:01:11 UTC
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 30ee52e6c284be1095fdf278439b4c0a7c5982f0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded