tdf#145651 Chart OOXML export: fix write error in exportSolidFill

Don't export the background color, if the FillColor property is empty.

Steps to reproduce:

1. E.g. in Impress, insert a chart (Insert > Chart...).

2. In chart editing mode, select the legend, use the "sidebar > Area >
Fill" and change from "none" to "color". Notice how the default blue
that is used does not correspond to the colour in the colour picker
right underneath.

3. Save as > OOXML format.

Change-Id: I33a060d8fc6c49708029008393e2e22e3d5335b2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152951
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 5a4f32ebc037964b7d00a468bc7761e078baeecc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153332
Tested-by: Jenkins